--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Tic Tac Toe</title>
   </head>
   <body>
+    <div id="canvasHolder">
+      <p id="winner">&nbsp;</p>
+    </div>
     <script defer src="sketch.js"></script>
     <script src="minimax.js"></script>
   </body>
