current player indication, ai improvements

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
   <body>
     <div id="canvasHolder">
       <p id="winner">&nbsp;</p>
+      <div id="inputHolder">
+        <label>
+          <input type="checkbox" id="useAi" checked>
+          AI Enabled
+        </label>
+        <input type="button" id="resetButton" value="Reset">
+     </div>
     </div>
     <script defer src="sketch.js"></script>
     <script src="minimax.js"></script>
